# gtk-bootstrap

./: README.md  gtk-bootstrap
template-files/: .gitignore  Makefile.am  README.md.in  configure.ac
template-files/src/: Makefile.am  main.c
